Adding more details about multithreading.

--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -784,9 +784,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4276ffcb",
+   "metadata": {},
+   "source": [
+    "# Exceptions from Functional Interfaces/Lambdas\n",
+    "\n",
+    "It is not possible to specify a throws specification on a lambda. It takes on the throws specification of the functional interface.\n",
+    "\n",
+    "The functional interface and/or method references must be consistent (throws at most what is specified).  If a checked exception is thrown inside that is not part of the spec, your method or lambda will have to throw another kind or silently handle it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e472a5f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@FunctionalInterface\n",
+    "interface MyRunnable {\n",
+    "    void run() throws InterruptedException;\n",
+    "}\n",
+    "\n",
+    "class ExceptionDemo {\n",
+    "    static void run() throws InterruptedException {}\n",
+    "    \n",
+    "    public static void main(String[] args) {\n",
+    "        MyRunnable r = () -> {\n",
+    "            throw new InterruptedException();\n",
+    "        };\n",
+    "        MyRunnable r2 = ExceptionDemo::run;\n",
+    "    }\n",
+    "}\n",
+    "ExceptionDemo.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5613b2ab",
+   "id": "e3690a10",
    "metadata": {},
    "outputs": [],
    "source": []
