--- a/java/Generics, Templates.ipynb
+++ b/java/Generics, Templates.ipynb
@@ -299,6 +299,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0b3e635e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface MyInterface<T> {\n",
+    "    T f();\n",
+    "    T g(T val);\n",
+    "}\n",
+    "\n",
+    "class MyClass implements MyInterface<Void> {\n",
+    "    public Void f() { return null; }\n",
+    "    // public void f() {} // ILLEGAL\n",
+    "    public Void g(Void v) { return v; }\n",
+    "}\n",
+    "\n",
+    "class VoidDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        MyClass m = new MyClass();\n",
+    "        m.f();\n",
+    "        m.g(null);\n",
+    "    }\n",
+    "}\n",
+    "VoidDemo.main(null);"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "32e9680b",
    "metadata": {},
