--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -725,7 +725,9 @@
     "\n",
     "__Checked exception__ that is thrown by methods that block on threads such as `join`, `sleep`, `wait`, etc.\n",
     "\n",
-    "As in the example above, you should catch it anytime you wait, sleep, etc."
+    "As in the example above, you should catch it anytime you wait, sleep, etc.\n",
+    "\n",
+    "NOTE: `supplyAsync` takes a `Supplier<T>`."
    ]
   },
   {
@@ -1557,7 +1559,9 @@
     "\n",
     "There is also `RecursiveAction` which doesn't return a value.  For instance, if the threads will add to a concurrent collection or print instead of aggregating a value.  In addition to the above, you can use `invokeAll()` within the `compute()` method to invoke a list of tasks.\n",
     "\n",
-    "The abstract base class of `RecursiveTask` and `RecursiveAction` is `ForkJoinTask`."
+    "The abstract base class of `RecursiveTask` and `RecursiveAction` is `ForkJoinTask`.\n",
+    "\n",
+    "NOTE: `compute()` is not on `ForkJoinTask` - that is why it's able to be void in `RecursiveAction`."
    ]
   },
   {
@@ -1695,7 +1699,7 @@
     "\n",
     "Typical usage is in `java.util.concurrent` utilities like `tryLock(long time, TimeUnit time)`, using a long value for the first param and a time unit for the 2nd param.  A \"forever\" value would be represented as `Long.MAX_VALUE` which is too long to ever come back.\n",
     "\n",
-    "NOTE: `thread.sleep()` does not use this (just has long __milliseconds__ and optional override with additional __nanoseconds__).\n",
+    "NOTE: `thread.sleep()` does not use this (just has long __milliseconds__ and optional override with additional __nanoseconds__).  `thread.join()` takes milliseconds as well.\n",
     "\n",
     "Instances of TimeUnit have some convenience conversion methods:\n",
     "- `long convert(sourceDuration, sourceUnit)`\n",
@@ -1722,7 +1726,8 @@
     "Not to be confused with TimeUnit, this is in `java.time` instead.\n",
     "\n",
     "- eg. `Duration.ofHours(24).plusDays(2).toMinutes()`\n",
-    "- note that durations can be __negative__"
+    "- note that durations can be __negative__\n",
+    "- if you convert to a lower-precision value, it will __truncate__ the extra precision"
    ]
   },
   {
@@ -1741,9 +1746,456 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c72bcc79",
+   "metadata": {},
+   "source": [
+    "# Further Clarity on Thread Death"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79e14bfa",
+   "metadata": {},
+   "source": [
+    "## Death by Arbitrary Exception\n",
+    "\n",
+    "- The main thread does not see the exception when it joins the child thread.  Joining is just a noop since the thread is already done.\n",
+    "- `InterruptedException` is never thrown in the main thread because nothing was \"interrupted\"\n",
+    "- `thread.isAlive()` accurately reflects that the thread died immediately"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "cc7c470c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All threads started!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread \"Thread-14\" java.lang.IllegalArgumentException\n",
+      "\tat REPL.$JShell$27C$ThreadDeathByExceptionDemo.lambda$main$0($JShell$27C.java:18)\n",
+      "\tat java.base/java.lang.Thread.run(Thread.java:1623)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Main thread slept!\n",
+      "Thread 1 is alive: false\n",
+      "Main thread - post join!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ThreadDeathByExceptionDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Thread thread1 = new Thread(() -> {\n",
+    "            throw new IllegalArgumentException();\n",
+    "        });\n",
+    "        thread1.start();\n",
+    "        \n",
+    "        System.out.println(\"All threads started!\");\n",
+    "        try {\n",
+    "            Thread.sleep(100);\n",
+    "        }\n",
+    "        catch (InterruptedException e) {\n",
+    "            // Not called\n",
+    "            System.out.println(\"Main thread interrupted!\");\n",
+    "        }\n",
+    "        // Called even though thread1 dies from exception already\n",
+    "        System.out.println(\"Main thread slept!\");\n",
+    "        System.out.println(\"Thread 1 is alive: \" + thread1.isAlive());\n",
+    "        \n",
+    "        try {\n",
+    "            thread1.join();\n",
+    "        }\n",
+    "        catch (InterruptedException e) {\n",
+    "            // Not called even though the thread did die.\n",
+    "            System.out.println(\"Main thread interrupted!\");\n",
+    "        }\n",
+    "        // Called even though thread is dead (noop).\n",
+    "        System.out.println(\"Main thread - post join!\");\n",
+    "    }\n",
+    "}\n",
+    "ThreadDeathByExceptionDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb234219",
+   "metadata": {},
+   "source": [
+    "## Death by InterruptedException\n",
+    "\n",
+    "This __doesn't compile__ because `InterruptedException` is a checked exception and `Runnable` doesn't declare it.  The same will happen if you try it other ways.\n",
+    "\n",
+    "You cannot use `InterruptedException` to kill a thread from the inside."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "147d7832",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m            \u001b[0m\u001b[1m\u001b[30m\u001b[41mthrow new InterruptedException();\u001b[0m\u001b[1m\u001b[30m\u001b[0m",
+      "\u001b[1m\u001b[31munreported exception java.lang.InterruptedException; must be caught or declared to be thrown\u001b[0m",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "class ThreadDeathByInterruptedExceptionDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Thread thread1 = new Thread(() -> {\n",
+    "            throw new InterruptedException();\n",
+    "        });\n",
+    "        thread1.start();\n",
+    "        \n",
+    "        System.out.println(\"All threads started!\");\n",
+    "        try {\n",
+    "            Thread.sleep(100);\n",
+    "        }\n",
+    "        catch (InterruptedException e) {\n",
+    "            // Not called\n",
+    "            System.out.println(\"Main thread interrupted!\");\n",
+    "        }\n",
+    "        // Called even though thread1 dies from exception already\n",
+    "        System.out.println(\"Main thread slept!\");\n",
+    "        System.out.println(\"Thread 1 is alive: \" + thread1.isAlive());\n",
+    "        \n",
+    "        try {\n",
+    "            thread1.join();\n",
+    "        }\n",
+    "        catch (InterruptedException e) {\n",
+    "            // Not called even though the thread did die.\n",
+    "            System.out.println(\"Main thread interrupted!\");\n",
+    "        }\n",
+    "        // Called even though thread is dead (noop).\n",
+    "        System.out.println(\"Main thread - post join!\");\n",
+    "    }\n",
+    "}\n",
+    "ThreadDeathByInterruptedExceptionDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a896892d",
+   "metadata": {},
+   "source": [
+    "## Death by Detecting Interruption\n",
+    "\n",
+    "- the fact that the child thread is interrupted does not throw an `InterruptedException` in the main thread\n",
+    "- the fact that `Thread.sleep` throws an `InterruptedException` in the child thread means the interrupted state gets reset at that point (but you can interrupt it again as we did)\n",
+    "    - this could have also been expressed as a `try/catch` where we threw if interruption detected\n",
+    "- typically, the child thread will detect it was interrupted and just end gracefully, allowing join to be a noop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a0e3dbaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All threads started!\n",
+      "Thread 1 is alive: true\n",
+      "Main thread - post join!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ThreadDeathByInterruptedDetectionDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Thread thread1 = new Thread(() -> {\n",
+    "            while (!Thread.interrupted()) {\n",
+    "                try {\n",
+    "                    Thread.sleep(100);\n",
+    "                }\n",
+    "                catch (Exception e) {\n",
+    "                    Thread.currentThread().interrupt();\n",
+    "                }\n",
+    "            }\n",
+    "        });\n",
+    "        thread1.start();\n",
+    "        \n",
+    "        System.out.println(\"All threads started!\");\n",
+    "        try {\n",
+    "            Thread.sleep(100);\n",
+    "        }\n",
+    "        catch (InterruptedException e) {\n",
+    "            // Not called\n",
+    "            System.out.println(\"Main thread interrupted!\");\n",
+    "        }\n",
+    "        System.out.println(\"Thread 1 is alive: \" + thread1.isAlive());\n",
+    "        \n",
+    "        thread1.interrupt();\n",
+    "        try {\n",
+    "            thread1.join();\n",
+    "        }\n",
+    "        catch (InterruptedException e) {\n",
+    "            // Not called even though the thread did die.\n",
+    "            System.out.println(\"Main thread interrupted!\");\n",
+    "        }\n",
+    "        // Called even though thread is dead (noop).\n",
+    "        System.out.println(\"Main thread - post join!\");\n",
+    "    }\n",
+    "}\n",
+    "ThreadDeathByInterruptedDetectionDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "394fdf08",
+   "metadata": {},
+   "source": [
+    "## Main Thread Interruption\n",
+    "\n",
+    "- actions like `join`, `sleep`, etc. throw `InterruptedException` in the current thread only, not in any parent or child thread\n",
+    "    - in this example, interrupting the main thread caused the exception when it tried to join a child thread that is active\n",
+    "- it is then up to you to deal with that (eg. to end execution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "53d1b02c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All threads started!\n",
+      "Thread 1 is alive: true\n",
+      "Main thread interrupted!\n",
+      "Main thread - post join!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MainThreadDeathDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Thread thread1 = new Thread(() -> {\n",
+    "            while (true) {\n",
+    "                try {\n",
+    "                    Thread.sleep(100);\n",
+    "                }\n",
+    "                catch (Exception e) {}\n",
+    "            }\n",
+    "        });\n",
+    "        thread1.start();\n",
+    "        \n",
+    "        System.out.println(\"All threads started!\");\n",
+    "        try {\n",
+    "            Thread.sleep(100);\n",
+    "        }\n",
+    "        catch (InterruptedException e) {\n",
+    "            // Not called\n",
+    "            System.out.println(\"Main thread interrupted!\");\n",
+    "        }\n",
+    "        System.out.println(\"Thread 1 is alive: \" + thread1.isAlive());\n",
+    "        \n",
+    "        Thread.currentThread().interrupt();\n",
+    "        try {\n",
+    "            thread1.join();\n",
+    "        }\n",
+    "        catch (InterruptedException e) {\n",
+    "            System.out.println(\"Main thread interrupted!\");\n",
+    "        }\n",
+    "        // Called even though thread is dead (noop).\n",
+    "        System.out.println(\"Main thread - post join!\");\n",
+    "    }\n",
+    "}\n",
+    "MainThreadDeathDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e751330",
+   "metadata": {},
+   "source": [
+    "## Interrupted vs. Alive\n",
+    "\n",
+    "`Interrupted` is a flag that tells java to throw `InterruptedException` (and clear the flag) next time certain methods are called in the interrupted thread.  But it has nothing to do (directly) with whether the thread is considered alive.\n",
+    "\n",
+    "You can even __join interrupted__ thread just fine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "f9b4fcc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Interrupted: true\n",
+      "Alive: true\n"
+     ]
+    }
+   ],
+   "source": [
+    "class AliveDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Thread.currentThread().interrupt();\n",
+    "        System.out.println(\"Interrupted: \" + Thread.interrupted());\n",
+    "        System.out.println(\"Alive: \" + Thread.currentThread().isAlive());\n",
+    "        \n",
+    "        Thread thread1 = new Thread(() -> {\n",
+    "           while (true) {\n",
+    "           } \n",
+    "        });\n",
+    "        thread1.start();\n",
+    "        thread1.interrupt();\n",
+    "        try {\n",
+    "            thread1.join(2000);\n",
+    "        }\n",
+    "        catch (Exception e) {\n",
+    "            System.out.println(\"Exception!\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "AliveDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae9bf670",
+   "metadata": {},
+   "source": [
+    "## Futures\n",
+    "\n",
+    "When you get a value from a future, you have 2 checked exceptions to worry about:\n",
+    "  - `ExecutionException`\n",
+    "      - thrown if an unchecked exception is thrown inside the exception code\n",
+    "            - you can use `CompletionException` if you want\n",
+    "  - `InterruptedException`\n",
+    "      - as above, only applies to the main thread\n",
+    "      \n",
+    "In addition, the unchecked `CancellationException` is thrown if cancelled from outside the future."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "2440a1ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Future started!\n",
+      "f cancelled\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.concurrent.CompletableFuture;\n",
+    "\n",
+    "class FutureDeathDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        CompletableFuture<Integer> f = CompletableFuture.supplyAsync(() -> {\n",
+    "            // throw new IllegalArgumentException();\n",
+    "            return 10;\n",
+    "        });\n",
+    "        f.cancel(true);  // boolean value doesn't seem to matter\n",
+    "        System.out.println(\"Future started!\");\n",
+    "        \n",
+    "        try {\n",
+    "            System.out.println(f.get());\n",
+    "        }\n",
+    "        catch (InterruptedException e) {\n",
+    "            // Checked\n",
+    "            // Not called because has to do with MAIN THREAD interruption\n",
+    "            System.out.println(\"f interrupted\");\n",
+    "        }\n",
+    "        catch (ExecutionException e) {\n",
+    "            // Checked\n",
+    "            // Not called unless we uncomment the throw and comment the cancel\n",
+    "            System.out.println(\"f execution exception\");\n",
+    "        }\n",
+    "        catch (CancellationException e) {\n",
+    "            // Unchecked\n",
+    "            // Called because we cancelled it\n",
+    "            System.out.println(\"f cancelled\");\n",
+    "        }\n",
+    "        \n",
+    "        System.out.println(\"Done!\");\n",
+    "    }\n",
+    "}\n",
+    "FutureDeathDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6d29563",
+   "metadata": {},
+   "source": [
+    "# InterruptedException\n",
+    "\n",
+    "Note that `InterruptedException` is in `java.lang` and is a __checked exception__."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87b7793e",
+   "metadata": {},
+   "source": [
+    "# Thread.currentThead()\n",
+    "\n",
+    "You can access members of `Thread` for the current thread by using `Thread.currentThread()`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc0150a9",
+   "metadata": {},
+   "source": [
+    "# join() timeout\n",
+    "\n",
+    "As seen in the above examples on thread death, if you join a thread with a timeout and the timeout elapses, you gracefully unjoin that thread and resume in the main thread without having finished it.  You can check if the thread is still alive afterwards.\n",
+    "\n",
+    "Instead of thinking of it as joining with the thread, you could think of it as waiting for the thread to die before continuing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c392eaa9",
+   "metadata": {},
+   "source": [
+    "# Timing an Algorithm\n",
+    "\n",
+    "Use `System.nanoTime()` to get a before and after time in nanoseconds."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47b79658",
+   "id": "e9347b2a",
    "metadata": {},
    "outputs": [],
    "source": []
