Adding clarification about Fork/Join exceptions.

--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -1561,7 +1561,8 @@
     "\n",
     "The abstract base class of `RecursiveTask` and `RecursiveAction` is `ForkJoinTask`.\n",
     "\n",
-    "NOTE: `compute()` is not on `ForkJoinTask` - that is why it's able to be void in `RecursiveAction`."
+    "NOTE: `compute()` is not on `ForkJoinTask` - that is why it's able to be void in `RecursiveAction`.\n",
+    "NOTE: `join()` does not throw any checked exceptions"
    ]
   },
   {
