Adding note about 2 GB limit and BigInteger.

--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -2124,9 +2124,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dd5f964f",
+   "metadata": {},
+   "source": [
+    "# 2 GB Limit\n",
+    "\n",
+    "Because arrays and collections use `int` for sizes, you can have at most 2 giga-elements in a collection in Java."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76b23921",
+   "id": "3d24249d",
    "metadata": {},
    "outputs": [],
    "source": []
