More info about Streams API.

--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -778,9 +778,168 @@
    "id": "c915e2c6",
    "metadata": {},
    "source": [
-    "# Lazy List\n",
+    "## Lazy List\n",
     "\n",
-    "Streams (eg. `Stream.of()`) are evaluated lazily."
+    "Streams (eg. `Stream.of()`) are evaluated lazily.  Only a __terminal operation__ (eg. getting a specific value or collecting to a list) will cause evaluation.\n",
+    "\n",
+    "In addition, methods like `Stream.iterate()` can be used to directly creating an __infinite sequence__.\n",
+    "\n",
+    "NOTE: be careful with how you use `Stream.iterate()` - it computes based on previous value, not based on index!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8f44e7fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 5, 10, 17, 26, 37, 50, 65, 82, 101]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "import java.util.stream.Collectors;\n",
+    "\n",
+    "class LazyListDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Infinite (but lazy)\n",
+    "        var allIntegers = Stream.iterate(1, n -> n + 1);\n",
+    "        var allSquares = allIntegers.map(n -> n * n);\n",
+    "        var allPlusOne = allSquares.map(n -> n + 1);\n",
+    "        \n",
+    "        // Print first 10\n",
+    "        System.out.println(allPlusOne.limit(10).collect(Collectors.toList()));\n",
+    "    }\n",
+    "}\n",
+    "LazyListDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2de11dac",
+   "metadata": {},
+   "source": [
+    "## Find First/Any Value Matching Lambda\n",
+    "\n",
+    "Because of __lazy evaluation__, the best way is to use streams with `filter()` and then `findFirst()`.\n",
+    "\n",
+    "NOTE: there is also the `findAny()` terminal operation to find one without any guarantee of order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0b55eb87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.List;\n",
+    "\n",
+    "class FindFirstDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        List<String> l = List.of(\"hello\", \"goodbye\", \"cat\", \"dog\");\n",
+    "        \n",
+    "        Optional<String> res = l.stream().filter(s -> s.length() <= 3).findFirst();\n",
+    "        if (res.isPresent()) {\n",
+    "            System.out.println(res.get());\n",
+    "        }\n",
+    "        else {\n",
+    "            System.out.println(\"not found!\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "FindFirstDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0600374e",
+   "metadata": {},
+   "source": [
+    "## Other Interesting Members of Stream"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1a0b267",
+   "metadata": {},
+   "source": [
+    "Instance Members:\n",
+    "  - `allMatch(predicate)` and `anyMatch(predicate)` and `noneMatch(predicate)`\n",
+    "  - `count()` to count elements\n",
+    "  - `distinct()` to deduplicate based on `Object.equals()`\n",
+    "  - `flatMap(mapFn)` is like map but each element becomes a stream and then they all get concatted lazily\n",
+    "  - `flatMapTo*` is like flatMap but getting IntStream, LongStream, or DoubleStream\n",
+    "  - `mapTo*` is similar but the flat versions but like regular map\n",
+    "  - `forEachOrdered` - for some streams (parallel ones), `forEach` has no order guarantee\n",
+    "  - `generate(supplier)` - infinite sequence from a generator function\n",
+    "  - `limit(n)`\n",
+    "  - `max()` and `min()`\n",
+    "  - `skip(n)`\n",
+    "  - `sorted()` and `sorted(comparator)`\n",
+    "  - `toArray()`\n",
+    "  - `peek(consumer)` is like `tap()` in rxjs\n",
+    "  \n",
+    "Static Members:\n",
+    "  - `concat(stream1, stream2)` to lazily do stream1 followed by stream2\n",
+    "  - `empty()` to get an empty stream"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea617506",
+   "metadata": {},
+   "source": [
+    "## Parallel Streams\n",
+    "\n",
+    "All the above are sequential streams.  To have streams perform operations like `map()` in parallel, you can do the following:\n",
+    "\n",
+    "1. Use `stream.parallel()` to convert a stream to parallel\n",
+    "1. Use `collection.parallelStream()` to get a parallel stream from a collection\n",
+    "\n",
+    "Not all algorithms will benefit from the extra overhead and loss of order guarantees of a parallel stream.  In addition, some operations (eg. `sort()` will negate parallel benefits).\n",
+    "\n",
+    "This uses `ForkJoinPool` under the hood."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "320b85da",
+   "metadata": {},
+   "source": [
+    "## Stream Builder\n",
+    "\n",
+    "```Java\n",
+    "Stream<Integer> s = Stream.builder().add(1).add(2).add(3).build();\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0432ea4",
+   "metadata": {},
+   "source": [
+    "## Other Uses of Streams\n",
+    "\n",
+    "The examples above focus on collections and hard-coded streams.\n",
+    "\n",
+    "Here are some other places you can find streams in Java's library:\n",
+    "\n",
+    "- `Random.ints()`, `Random.longs()`, etc. to get infinite random number streams\n",
+    "- `optional.stream()` can be used to treat an Optional as 0 or 1 element stream"
    ]
   },
   {
