--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -1562,7 +1562,7 @@
     "The abstract base class of `RecursiveTask` and `RecursiveAction` is `ForkJoinTask`.\n",
     "\n",
     "NOTE: `compute()` is not on `ForkJoinTask` - that is why it's able to be void in `RecursiveAction`.\n",
-    "NOTE: `join()` does not throw any checked exceptions"
+    "NOTE: `join()` does not throw any checked exceptions. It will rethrow any unchecked exceptions up to the top-level of the computation."
    ]
   },
   {
