More stream info and exception info.

--- a/java/Control Flow.ipynb
+++ b/java/Control Flow.ipynb
@@ -850,6 +850,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0c1ffde7",
+   "metadata": {},
+   "source": [
+    "# Some Key Exception Members\n",
+    "\n",
+    "- `getMessage()` -> String\n",
+    "- `getCause()` -> inner exception wrapped by this exception\n",
+    "- `printStackTrace()` -> prints stack trace for debugging\n",
+    "    - optional override for stream\n",
+    "- `getStackTrace()` -> array of stack trace info\n",
+    "    - element 0 is TOS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "330128bb",
    "metadata": {},
    "source": [
