--- a/java/Functional Programming.ipynb
+++ b/java/Functional Programming.ipynb
@@ -912,7 +912,232 @@
     "\n",
     "Not all algorithms will benefit from the extra overhead and loss of order guarantees of a parallel stream.  In addition, some operations (eg. `sort()` will negate parallel benefits).\n",
     "\n",
-    "This uses `ForkJoinPool` under the hood."
+    "This uses `ForkJoinPool` under the hood.\n",
+    "\n",
+    "You can convert back to sequential with `sequential()` on the parallel stream."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5e8ca68",
+   "metadata": {},
+   "source": [
+    "### Source Order Retained\n",
+    "\n",
+    "Despite converting to parallel and back, the final order is the same as the source.\n",
+    "\n",
+    "This is true of __any terminal operation__ except for `forEach`.  Only intermediate computations lose order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "253fc292",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "import java.util.stream.Collectors;\n",
+    "\n",
+    "class ParallelStreamDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "       Stream<Integer> s = Stream.of(1, 2, 3, 4, 5);\n",
+    "       Stream<Integer> p = s.parallel();\n",
+    "       Stream<Integer> s2 = p.sequential();\n",
+    "       \n",
+    "       System.out.println(s2.collect(Collectors.toList()));\n",
+    "    }\n",
+    "}\n",
+    "ParallelStreamDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dc0f35c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "import java.util.stream.Collectors;\n",
+    "\n",
+    "class ParallelStreamDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "       Stream<Integer> s = Stream.of(1, 2, 3, 4, 5);\n",
+    "       Stream<Integer> p = s.parallel();\n",
+    "       System.out.println(p.findFirst().get());\n",
+    "    }\n",
+    "}\n",
+    "ParallelStreamDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20889dac",
+   "metadata": {},
+   "source": [
+    "### Intermediate Order Undetermined\n",
+    "\n",
+    "One of the main points of using a parallel stream is that intermediate operations like `map()` don't need to happen in order, so therefore they can be done on multiple threads in any way the system sees fit.\n",
+    "\n",
+    "The order will be fixed up again on the terminal operation of the stream."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "da75397c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "1\n",
+      "5\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "import java.util.stream.Collectors;\n",
+    "\n",
+    "class ParallelStreamDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "       Stream<Integer> s = Stream.of(1, 2, 3, 4, 5);\n",
+    "       Stream<Integer> p = s.parallel();\n",
+    "       Stream<Integer> p2 = p.map(n -> {\n",
+    "           System.out.println(n);\n",
+    "           return n;\n",
+    "       });\n",
+    "       p2.collect(Collectors.toList());\n",
+    "    }\n",
+    "}\n",
+    "ParallelStreamDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b45f2d94",
+   "metadata": {},
+   "source": [
+    "### forEach vs. forEachOrdered\n",
+    "\n",
+    "`forEach` specifically doesn't try to put the order back, while `forEachOrdered` does.\n",
+    "\n",
+    "This only matters for a parallel stream.  If you put it back into sequential, then `forEach` respects order again."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fb3f3d5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "import java.util.stream.Collectors;\n",
+    "\n",
+    "class ParallelStreamDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "       Stream<Integer> s = Stream.of(1, 2, 3, 4, 5);\n",
+    "       Stream<Integer> p = s.parallel();\n",
+    "       //Stream<Integer> s2 = p.sequential();\n",
+    "       \n",
+    "       //p.forEach(n -> System.out.println(n));  // order wrong\n",
+    "       //s2.forEach(n -> System.out.println(n)); // order right\n",
+    "       p.forEachOrdered(n -> System.out.println(n)); // order right\n",
+    "    }\n",
+    "}\n",
+    "ParallelStreamDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1978d879",
+   "metadata": {},
+   "source": [
+    "## Terminal Operations vs. Intermediate Operations\n",
+    "\n",
+    "A __terminal operation__ is something that turns the stream back into a collection or single value.  It results in evaluating all or part of the items, and if the stream is ordered (even if parallel), puts things back in the right order.\n",
+    "\n",
+    "An __intermediate operation__ is evaluated lazily as needed by a terminal operation.  It can happen out of order for a parallel or unordered stream.  Even intermediate operations invalidate references to source streams though.\n",
+    "\n",
+    "NOTE: `toString()` is not terminal and does not print the contents of the stream."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e14b319",
+   "metadata": {},
+   "source": [
+    "## Unordered Streams\n",
+    "\n",
+    "You can use the `unordered()` method to turn an ordered stream into an unordered one, regardless of whether it's parallel.  That means that terminal operations are not required to restore the order, which might have performance benefits.\n",
+    "\n",
+    "NOTE: That doesn't mean the order will definitely be changed.  For instance, in this example, Java has no reason to change it.\n",
+    "\n",
+    "NOTE: collections like `HashSet` will already return unordered streams!\n",
+    "\n",
+    "NOTE: recall the use of `forEach` vs. `forEachOrdered` here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "80395656",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "import java.util.stream.Collectors;\n",
+    "\n",
+    "class UnorderedStreamDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Stream<Integer> s = Stream.of(1, 2, 3, 4, 5).unordered();\n",
+    "        System.out.println(s.collect(Collectors.toList()));\n",
+    "    }\n",
+    "}\n",
+    "UnorderedStreamDemo.main(null);"
    ]
   },
   {
@@ -939,7 +1164,50 @@
     "Here are some other places you can find streams in Java's library:\n",
     "\n",
     "- `Random.ints()`, `Random.longs()`, etc. to get infinite random number streams\n",
-    "- `optional.stream()` can be used to treat an Optional as 0 or 1 element stream"
+    "- `optional.stream()` can be used to treat an Optional as 0 or 1 element stream\n",
+    "- `java.nio.file.Files.lines(Paths.get(path))` gives you a stream of strings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a6a5332",
+   "metadata": {},
+   "source": [
+    "## Autocloseable\n",
+    "\n",
+    "Because streams die when you do anything from them, they are able to implement `Autocloseable`.  That is useful for APIs such as `Files.lines()` so that the file can be managed by a try-with-resources.\n",
+    "\n",
+    "Most streams won't use this.  It just allows try-with-resources to close the stream, which closes the file.\n",
+    "\n",
+    "This does not cause issues with the fact that map() invalidates a stream object (still works correctly)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "06ac9a2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.stream.Stream;\n",
+    "import java.util.stream.Collectors;\n",
+    "\n",
+    "class AutocloseDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        try (Stream<Integer> s = Stream.of(1, 2, 3, 4, 5).unordered()) {\n",
+    "            System.out.println(s.collect(Collectors.toList()));\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "AutocloseDemo.main(null);"
    ]
   },
   {
